fix bug on upgraded bootstrap

--- a/reg/plenary.html
+++ b/reg/plenary.html
@@ -97,8 +97,8 @@
       <button
         class="navbar-toggler"
         type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent"
         aria-expanded="false"
         aria-label="Toggle navigation"
@@ -175,7 +175,7 @@
               <button
                 type="button"
                 class="close"
-                data-dismiss="modal"
+                data-bs-dismiss="modal"
                 aria-label="Close"
               >
                 <span aria-hidden="true">&times;</span>
@@ -193,7 +193,7 @@
               <button
                 type="button"
                 class="btn btn-secondary"
-                data-dismiss="modal"
+                data-bs-dismiss="modal"
               >
                 Close
               </button>
@@ -231,8 +231,8 @@
                   <td>Dr. Louis Friedman</td>
                   <td>
                     <a
-                      data-toggle="modal"
-                      data-target="#confirmation"
+                      data-bs-toggle="modal"
+                      data-bs-target="#confirmation"
                       class="btn btn-primary btn-sm text-white"
                       onclick="setVal(1);"
                       >Select</a
@@ -249,8 +249,8 @@
                   <td>Ajani Charles | Mehrdad Baghai</td>
                   <td>
                     <a
-                      data-toggle="modal"
-                      data-target="#confirmation"
+                      data-bs-toggle="modal"
+                      data-bs-target="#confirmation"
                       class="btn btn-primary btn-sm text-white text-white"
                       onclick="setVal(2);"
                       >Select</a
@@ -267,8 +267,8 @@
                   <td>David Carroll | the Social Dilemma Film crew</td>
                   <td>
                     <a
-                      data-toggle="modal"
-                      data-target="#confirmation"
+                      data-bs-toggle="modal"
+                      data-bs-target="#confirmation"
                       class="btn btn-primary btn-sm text-white"
                       onclick="setVal(3);"
                       >Select</a
@@ -285,8 +285,8 @@
                   <td>Bharat Masrani | Opher Baron</td>
                   <td>
                     <a
-                      data-toggle="modal"
-                      data-target="#confirmation"
+                      data-bs-toggle="modal"
+                      data-bs-target="#confirmation"
                       class="btn btn-primary btn-sm text-white"
                       onclick="setVal(4);"
                       >Select</a
