janet ivey is back

--- a/plenaries/space.html
+++ b/plenaries/space.html
@@ -98,16 +98,30 @@
 			</div>
             
 			<div class="card card-body mt-2">
-				<h1 class="text-center">Speaker</h1>
+				<h1 class="text-center">Speakers</h1>
                 <hr>
 				<div class="row pb-2">
 					<div class="col-md-4">
 						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/lfriedman.png" alt="Dr. Louis Friedman">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dr. Louis Friedman</h2>
-						Dr. Louis Friedman is an emeritus executive director and Co-Founder of the Planetary Society, a non-profit organization driven to promote research and discoveries in a variety of fields relating to astronomy, planetary science, and space exploration. As a vital contributor to the space science community for over 30 years, Dr. Friedman has had a wealth of experience as he continues to guide humanity’s journey into the solar system. He earned his M.S in Engineering Mechanics at Cornell University (1963) and a Ph.D. attending the Aeronautics and Astronauts Department at M.I.T. (1971) where he developed a thesis on Extracting Scientific Information from Spacecraft Tracking Data. Additionally, he has worked extensively at the Jet Propulsion Laboratory for 10 years (1970-80), the AVCO Space Systems Division for 5 years (1963-68), and has had an accomplished history as a AIAA Congressional Fellow where he continues to testify American congress to advance issues concerning space and technological exploration. As an author of multiple books on Solar Sails; Interplanetary Flight; and Spaceflight to Mars, Dr. Friedman continues to make strong contributions to the space science community as the co-leader of the Asteroid Redirect Mission program.
+            <h2 class="text-center text-md-left">Dr. Louis Friedman</h2>
+            <p>
+						  Dr. Louis Friedman is an emeritus executive director and Co-Founder of the Planetary Society, a non-profit organization driven to promote research and discoveries in a variety of fields relating to astronomy, planetary science, and space exploration. As a vital contributor to the space science community for over 30 years, Dr. Friedman has had a wealth of experience as he continues to guide humanity’s journey into the solar system. He earned his M.S in Engineering Mechanics at Cornell University (1963) and a Ph.D. attending the Aeronautics and Astronauts Department at M.I.T. (1971) where he developed a thesis on Extracting Scientific Information from Spacecraft Tracking Data. Additionally, he has worked extensively at the Jet Propulsion Laboratory for 10 years (1970-80), the AVCO Space Systems Division for 5 years (1963-68), and has had an accomplished history as a AIAA Congressional Fellow where he continues to testify American congress to advance issues concerning space and technological exploration. As an author of multiple books on Solar Sails; Interplanetary Flight; and Spaceflight to Mars, Dr. Friedman continues to make strong contributions to the space science community as the co-leader of the Asteroid Redirect Mission program.
+            </p>
+          </div>
+        </div>
+        
+        <div class="row pb-2">
+					<div class="col-md-4">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jivey.png" alt="Janet Ivey">
 					</div>
+					<div class="col-md-8">
+            <h2 class="text-center text-md-left">Janet Ivey</h2>
+            <p>
+						  Janet Ivey is the creator and CEO of Janet’s Planet, Inc. and is committed to enriching the lives of children through educational content driven multi-media education and programming. With over 23 years in the media, Ivey has captivated Nashville and beyond with her work and has received 12 Regional Emmys, 5 Gracie Allen awards and a STEMFLORIDA award for her children’s series Janet’s Planet. This dynamic and fast-paced series is geared to 6-11 year olds and focuses on science, space, history and health. Viewers get to travel at the speed of thought and the short form series can be seen on public television stations nationwide as well as YouTube, YouTube Kids, BatteryPop, Club Jelly Telly, and HighBrow. Janet is a on the Board of Governors for the National Space Society, a Buzz Aldrin ShareScience Ambassador, spokesperson for Enterprise In Space, and in 2015 did educational outreach for NASA’s New Horizons mission with the #DearPluto Project. Janet Ivey continues to be a strong advocate for communication, engagement, and, most importantly, STEM education, due its ability to profoundly shape and dictate our Tomorrow. She continues to believe in providing sufficient and encouraging scientific experiences to help inspire future generations to use their innate intelligence and creativity to make scientific, artistic and technological advances needed for this planet and the exploration of other worlds.
+            </p>
+          </div>
 				</div>
       </div>
 
