--- a/team/index.html
+++ b/team/index.html
@@ -1157,6 +1157,38 @@
                 </div>
               </div>
             </div>
+            <div class="row">
+              <div class="col">
+                <div class="row mt-4 mb-4">
+                  <div class="col-sm-4">
+                    <img
+                      class="img-fluid rounded-circle"
+                      src="../img/ambassadors/dgovas.jpg"
+                      alt="Danai Govas"
+                    />
+                  </div>
+                  <div class="col-sm-8">
+                    <h4 class="card-title">Danai Govas</h4>
+                    <h5>Bayview Glen</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="row mt-4 mb-4">
+                  <div class="col-sm-4">
+                    <img
+                      class="img-fluid rounded-circle"
+                      src="../img/ambassadors/jpitsillides.jpg"
+                      alt="Jessie Pitsillides"
+                    />
+                  </div>
+                  <div class="col-sm-8">
+                    <h4 class="card-title">Jessie Pitsillides</h4>
+                    <h5>Godolphin & Latymer School</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
