--- a/schedule/index.html
+++ b/schedule/index.html
@@ -115,7 +115,7 @@
 
     <div class="container" color="red">
       <div class="alert bg-danger text-center" role="alert">
-        <button type="button" class="close" data-dismiss="alert">
+        <button type="button" class="close" data-bs-dismiss="alert">
           &times;
         </button>
         <!-- Makes the banner closeable -->
