--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
 
     <div class="container" color="red">
       <div class="alert bg-danger text-center" role="alert">
->        <button type="button" class="close" data-bs-dismiss="alert">
+        >
+        <button type="button" class="close" data-bs-dismiss="alert">
           &times;
-        </button
+        </button>
         <!-- Makes the banner closeable -->
         Registration is <b>LIVE</b>. Check the button in the navbar!
       </div>
