📫Added discord invite

--- a/reg/success.html
+++ b/reg/success.html
@@ -140,6 +140,14 @@
           <h3>
             You can check your schedule and select plenaries from the next page.
           </h3>
+          <div class="row mt-5">
+            <h4 class="col-sm-9">Join the WAC community on Discord!</h4>
+            <a
+              class="btn btn-primary btn-sm-2 col mr-5"
+              href="https://discord.gg/NXpxSfRyEe"
+              >Join ></a
+            >
+          </div>
           <hr />
           <p>
             You are being redirected, click
@@ -149,10 +157,10 @@
         </div>
       </div>
       <script>
-        setTimeout(() => {
-          window.location.href =
-            "https://worldaffairs.ucc.on.ca/reg/lookup.html";
-        }, 4000);
+        // setTimeout(() => {
+        //   window.location.href =
+        //     "https://worldaffairs.ucc.on.ca/reg/lookup.html";
+        // }, 10000);
       </script>
 
       <footer class="footer text-center mt-3">
