fix redirect bug

--- a/reg/success.html
+++ b/reg/success.html
@@ -157,10 +157,10 @@
         </div>
       </div>
       <script>
-        // setTimeout(() => {
-        //   window.location.href =
-        //     "https://worldaffairs.ucc.on.ca/reg/lookup.html";
-        // }, 10000);
+        setTimeout(() => {
+          window.location.href =
+            "https://worldaffairs.ucc.on.ca/reg/lookup.html";
+        }, 10000);
       </script>
 
       <footer class="footer text-center mt-3">
