--- a/reg/success.html
+++ b/reg/success.html
@@ -40,6 +40,7 @@
       href="../img/favicon-16x16.png"
     />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
+
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../js/google_analytics.js"></script>
     <script defer src="../js/fontawesome-all.min.js"></script>
@@ -137,16 +138,40 @@
           <h1>Success!</h1>
 
           <p>You are registered for WAC 2020. We look forward to seeing you!</p>
-          <h3>
-            You can check your schedule and select plenaries from the next page.
-          </h3>
-          <div class="row mt-5">
-            <h4 class="col-sm-9">Join the WAC community on Discord!</h4>
-            <a
-              class="btn btn-primary btn-sm-2 col mr-5"
-              href="https://discord.gg/NXpxSfRyEe"
-              >Join ></a
-            >
+          <div class="row">
+            <div class="col-sm-8 text-center">
+              <h3>Select your plenaries and check your personal schedule</h3>
+              <a class="btn btn-primary text-white">WAC2021 Links Hub</a>
+            </div>
+            <span class="col fa fa-calendar fa-7x text-primary"></span>
+          </div>
+          <hr />
+          <h4>Other interesting options:</h4>
+          <div class="row mt-3 text-center">
+            <div class="col text-center">
+              <a
+                class="text-dark"
+                href="https://www.instagram.com/WorldAffairsCon/"
+              >
+                <span class="fab fa-instagram fa-5x"></span>
+              </a>
+              <p>Instagram</p>
+            </div>
+            <div class="col text-center">
+              <a class="text-dark" href="https://discord.gg/NXpxSfRyEe">
+                <span class="fab fa-discord fa-5x"></span>
+              </a>
+              <p>Discord Server</p>
+            </div>
+            <div class="col text-center">
+              <a
+                class="text-dark"
+                href="https://www.linkedin.com/company/world-affairs-conference"
+              >
+                <span class="fab fa-linkedin fa-5x"></span>
+              </a>
+              <p>LinkedIn Post</p>
+            </div>
           </div>
           <hr />
           <p>
@@ -160,7 +185,7 @@
         setTimeout(() => {
           window.location.href =
             "https://worldaffairs.ucc.on.ca/reg/lookup.html";
-        }, 10000);
+        }, 13000);
       </script>
 
       <footer class="footer text-center mt-3">
