--- a/faq/index.html
+++ b/faq/index.html
@@ -59,8 +59,8 @@
       <button
         class="navbar-toggler"
         type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent"
         aria-expanded="false"
         aria-label="Toggle navigation"
@@ -125,7 +125,6 @@
       </div>
     </div>
     -->
-
     <div class="container">
       <div class="card card-body">
         <h1 class="text-xs-center">Frequently Asked Questions</h1>
@@ -144,9 +143,9 @@
         <div id="accordion-general" role="tablist" aria-multiselectable="true">
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-general"
-              href="#collapse-whatiswac"
+              data-bs-toggle="collapse"
+              data-bs-parrent="#accordion-general"
+              data-bs-target="#collapse-whatiswac"
               aria-expanded="true"
               aria-controls="collapse-whatiswac"
             >
@@ -180,9 +179,9 @@
 
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-general"
-              href="#collapse-wheniswac"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-general"
+              data-bs-target="#collapse-wheniswac"
               aria-expanded="true"
               aria-controls="collapse-wheniswac"
             >
@@ -208,9 +207,9 @@
 
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-general"
-              href="#collapse-whocanattend"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-general"
+              data-bs-target="#collapse-whocanattend"
               aria-expanded="true"
               aria-controls="collapse-whocanattend"
             >
@@ -244,9 +243,9 @@
         >
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-conferenceday"
-              href="#collapse-costofsprint"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-conferenceday"
+              data-bs-target="#collapse-costofsprint"
               aria-expanded="true"
               aria-controls="collapse-costofsprint"
             >
@@ -272,9 +271,9 @@
 
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-conferenceday"
-              href="#collapse-whenissprint"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-conferenceday"
+              data-bs-target="#collapse-whenissprint"
               aria-expanded="true"
               aria-controls="collapse-whenissprint"
             >
@@ -299,9 +298,9 @@
 
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-conferenceday"
-              href="#collapse-whattimesdoalloftheseeventshappen"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-conferenceday"
+              data-bs-target="#collapse-whattimesdoalloftheseeventshappen"
               aria-expanded="true"
               aria-controls="collapse-whattimesdoalloftheseeventshappen"
             >
@@ -330,9 +329,9 @@
 
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-conferenceday"
-              href="#collapse-willstudentsbeprovidedlunch"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-conferenceday"
+              data-bs-target="#collapse-willstudentsbeprovidedlunch"
               aria-expanded="true"
               aria-controls="collapse-willstudentsbeprovidedlunch"
             >
@@ -371,9 +370,9 @@
         >
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-registration"
-              href="#collapse-howcaniregistermyschool"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-registration"
+              data-bs-target="#collapse-howcaniregistermyschool"
               aria-expanded="true"
               aria-controls="collapse-howcaniregistermyschool"
             >
@@ -402,9 +401,9 @@
 
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-registration"
-              href="#collapse-whenisregistrationdue"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-registration"
+              data-bs-target="#collapse-whenisregistrationdue"
               aria-expanded="true"
               aria-controls="collapse-whenisregistrationdue"
             >
@@ -433,9 +432,9 @@
 
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-registration"
-              href="#collapse-howmuchdoesregcost"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-registration"
+              data-bs-target="#collapse-howmuchdoesregcost"
               aria-expanded="true"
               aria-controls="collapse-howmuchdoesregcost"
             >
@@ -464,9 +463,9 @@
 
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-registration"
-              href="#collapse-caniregisterasanindividualstudent"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-registration"
+              data-bs-target="#collapse-caniregisterasanindividualstudent"
               aria-expanded="true"
               aria-controls="collapse-caniregisterasanindividualstudent"
             >
@@ -505,9 +504,9 @@
         >
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-keynoteaddress"
-              href="#collapse-whathappensduringthekeynoteaddress"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-keynoteaddress"
+              data-bs-target="#collapse-whathappensduringthekeynoteaddress"
               aria-expanded="true"
               aria-controls="collapse-whathappensduringthekeynoteaddress"
             >
@@ -537,9 +536,9 @@
 
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-keynoteaddress"
-              href="#collapse-whendoesthekeynoteaddressstart"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-keynoteaddress"
+              data-bs-target="#collapse-whendoesthekeynoteaddressstart"
               aria-expanded="true"
               aria-controls="collapse-whendoesthekeynoteaddressstart"
             >
@@ -568,9 +567,9 @@
 
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-keynoteaddress"
-              href="#collapse-whocanattendthekeynoteaddress"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-keynoteaddress"
+              data-bs-target="#collapse-whocanattendthekeynoteaddress"
               aria-expanded="true"
               aria-controls="collapse-whocanattendthekeynoteaddress"
             >
@@ -609,9 +608,9 @@
         >
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-conferenceday"
-              href="#collapse-whathappensduringtheconferenceday"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-conferenceday"
+              data-bs-target="#collapse-whathappensduringtheconferenceday"
               aria-expanded="true"
               aria-controls="collapse-whathappensduringtheconferenceday"
             >
@@ -643,9 +642,9 @@
 
           <div class="card">
             <a
-              data-toggle="collapse"
-              data-parent="#accordion-conferenceday"
-              href="#collapse-whattimesdoalloftheseeventshappen"
+              data-bs-toggle="collapse"
+              data-bs-parent="#accordion-conferenceday"
+              data-bs-target="#collapse-whattimesdoalloftheseeventshappen"
               aria-expanded="true"
               aria-controls="collapse-whattimesdoalloftheseeventshappen"
             >
