--- a/sprint/index.html
+++ b/sprint/index.html
@@ -30,7 +30,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -145,11 +145,11 @@
             </div>
             <div id="judges" style="margin-top: 4vh; border: 1px solid white" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
-                <li data-target="#judges" data-slide-to="0" class="active"></li>
-                <li data-target="#judges" data-slide-to="1"></li>
-                <li data-target="#judges" data-slide-to="2"></li>
-                <li data-target="#judges" data-slide-to="3"></li>
-                <li data-target="#judges" data-slide-to="4"></li>
+                <li data-bs-target="#judges" data-slide-to="0" class="active"></li>
+                <li data-bs-target="#judges" data-slide-to="1"></li>
+                <li data-bs-target="#judges" data-slide-to="2"></li>
+                <li data-bs-target="#judges" data-slide-to="3"></li>
+                <li data-bs-target="#judges" data-slide-to="4"></li>
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
