--- a/contact/index.html
+++ b/contact/index.html
@@ -96,6 +96,9 @@
           <li>
             <a class="nav-link" href="../team/index.html">Team</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../startups/index.html">Startups</a>
+          </li>
         </ul>
         <ul class="navbar-nav float-lg-right">
           <li class="nav-item mr-2">
