added startups page

--- a/team/index.html
+++ b/team/index.html
@@ -91,6 +91,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="../team/index.html">Team</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../startups/index.html">Startups</a>
+          </li>
         </ul>
         <ul class="navbar-nav float-lg-right">
           <li class="nav-item mr-2">
