linked startup exhibition

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -163,7 +163,7 @@
                 <td>GoToWebinar</td>
               </tr>
               <tr>
-                <td>Startup Exhibition &amp; Lunch (Optional)</td>
+                <td><a href="../startups/index.html">Startup Exhibition</a> &amp; Lunch (Optional)</td>
                 <td>11:10 to 11:40am</td>
                 <td>Zoom</td>
               </tr>
