--- a/team/index.html
+++ b/team/index.html
@@ -1207,6 +1207,23 @@
                 </div>
               </div>
             </div>
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="row mt-4 mb-4">
+                  <div class="col-sm-4">
+                    <img
+                      class="img-fluid rounded-circle"
+                      src="../img/ambassadors/mhsu.jpg"
+                      alt="Maddie Hsu"
+                    />
+                  </div>
+                  <div class="col-sm-8">
+                    <h4 class="card-title">Maddie Hsu</h4>
+                    <h5>Design Tech High School</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
