--- a/startups/index.html
+++ b/startups/index.html
@@ -124,7 +124,7 @@
           <div class="col-md-12">
             <h2 class="text-center text-md-left">Alice Insights</h2>
             <p>
-                Blurb coming soon...
+                Alice Insights is an interdisciplinary team of researchers, business professionals, and environmental practitioners, dedicated to the creation of cutting-edge solutions that help navigate climate risk and opportunity. Their platform uses machine learning & earth systems science to predict the future physical impacts of climate change on assets across the globe.
             </p>
           </div>
 
@@ -133,7 +133,7 @@
           <div class="col-md-12">
             <h2 class="text-center text-md-left">DreamAI</h2>
             <p>
-                Blurb coming soon...
+              Innovating Canadian Immigration. DreamAI is a toronto-based startup incubated in the DMZ Sandbox at the intersection of AI and immigration. They strive to optimize the potential of future economic immigrants in the Canadian economy, maximizing the opportunity for a sustainable and successful livelihood.
             </p>
           </div>
 
@@ -168,7 +168,7 @@
           <div class="col-md-12">
             <h2 class="text-center text-md-left">Peer4Peer</h2>
             <p>
-                Blurb coming soon...
+              Peer4Peer is a free, online and interactive peer tutoring platform that connects student tutors and tutees to offer personalized tutoring and mentorship. It serves to bridge the growing inequities in learning and promote virtual companionship during a socially isolating time. A startup incubated during COVID-19, Peer4Peer helps engage fellow students from all backgrounds, across Canada and beyond. Through the Peer4Peer website, any student can sign up to become a tutor or tutee; however, to become a tutor, they must first be validated by an internal team. Upon selection, there is a matchmaking mechanism to optimize the fit and experience between both parties. For tutees, they are able to work 1 on 1, or in a group of up to 5 on a subject or course of their interest at no cost.
             </p>
           </div>
 
