--- a/startups/index.html
+++ b/startups/index.html
@@ -133,7 +133,7 @@
           <div class="col-md-12">
             <h2 class="text-center text-md-left">DreamAI</h2>
             <p>
-              Innovating Canadian Immigration. DreamAI is a toronto-based startup incubated in the DMZ Sandbox at the intersection of AI and immigration. They strive to optimize the potential of future economic immigrants in the Canadian economy, maximizing the opportunity for a sustainable and successful livelihood.
+              Innovating Canadian Immigration. DreamAI is a Toronto-based startup incubated in the DMZ Sandbox at the intersection of AI and immigration. They strive to optimize the potential of future economic immigrants in the Canadian economy, maximizing the opportunity for a sustainable and successful livelihood.
             </p>
           </div>
 
@@ -158,6 +158,15 @@
 
           <div class="col-md-12">
             <h2 class="text-center text-md-left">Greenhouse Juice</h2>
+            <p>
+              Hop In provides a logistics software service that offers customized corporate shuttle solutions for the daily commute. As a result, companies are able to retain more talent, save money, and access a larger hiring pool, all while providing an efficient commute to work.
+            </p>
+          </div>
+
+          <br>
+
+          <div class="col-md-12">
+            <h2 class="text-center text-md-left">Hop In</h2>
             <p>
                 Greenhouse Juice is a Canadian beverage company aiming to make healthy and sustainable choices the new normal. They offer widespread access to high-quality plant-based nutrition and wellness in a sustainable manner.
             </p>
